--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,6 +61,6 @@
         <div [innerHTML]="htmlContent" class="impotedhtml"></div>
       </div>
       <ng-template #filteredhtml>
-        <div [innerHTML]="filteredElements"></div>
+        <div [innerHTML]="filteredElements" class="impotedhtml"></div>
       </ng-template>
     </ng-template> 
