--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,7 +58,7 @@
       </svg>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
-      <button (click)='navigateToHome()'>Navigate to the Site of the 7.10.2023 victims War</button>
+      <button id="NavigateToSite" (click)='navigateToHome()'>Navigate to the Site of the 7.10.2023 victims War</button>
         <!--<div *ngIf="isLoading; else content">-->
           <!-- Show this when isLoading is true -->
           <!--<<p>Please wait...</p>
