--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,12 @@
 <div *ngIf="isLoading; else content">
     <!-- Show this when isLoading is true -->
     <p>Please wait while Page is loading...</p>
-    <div [innerHTML]="documentHtmlContent"></div>
+    <h1 style="font-size: 4rem; color: red">BRING THEM HOME</h1>
+    <div class="image-container">
+      <div class="image-wrapper">
+        <div [innerHTML]="documentHtmlContent"></div>
+      </div>
+    </div>
   </div>  
   <ng-template #content>
     <div id="yt-background">
