--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <p>Please wait while Page is loading...</p>
     <h1 style="font-size: 4rem; color: red">BRING THEM HOME</h1>
       <div class="image-wrapper">
-        <div [innerHTML]="documentHtmlContent"></div>
+        <div class="image-container" [innerHTML]="documentHtmlContent"></div>
       </div>
     </div>
   </div>  
