--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <!-- Show this when isLoading is true -->
     <p>Please wait while Page is loading...</p>
     <h1 style="font-size::5vw; color: red">BRING THEM HOME</h1>
-        <div class=divchild [innerHTML]="documentHtmlContent"></div> 
+        <div class="divchild" [innerHTML]="documentHtmlContent"></div> 
 </div>
   <ng-template #content>
     <div id="yt-background">
