--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -88,18 +88,28 @@ iframe{
   border: 1px solid #ccc; /* Optional border for visualization */
 }
 
-.divcontainer {
+.image-containerA {
+  width: 1920px; /* Set the container width */
+  height: 1800px; /* Set the container height */
+  border: 1px solid red; /* Red border around the container */
   position: relative; /* Establishes a positioning context for absolutely positioned children */
-  width: 500px; /* Set container width */
-  height: 300px; /* Set container height */
-  border: 1px solid #ccc; /* Optional: Border for visualization */
 }
 
-.divchild {
-  position: absolute; /* Position the child div */
-  top: 0; /* Align to the top edge of the container */
-  left: 0; /* Align to the left edge of the container */
-  width: 50px; /* Set width */
-  height: 50px; /* Set height */
-  background-color: red; /* Background color for visualization */
+.image-containerA .image-wrapper {
+  position: absolute; /* Position the wrapper relative to the container */
+  top: 0;
+  left: 0;
+  width: 100%; /* Occupy full width of the container */
+  height: 100%; /* Occupy full height of the container */
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid blue; /* Blue border around the wrapper for visualization */
+  box-sizing: border-box; /* Include border in width and height calculations */
+}
+
+.image-container .item {
+  width: 100px; /* Width of each image */
+  height: 100px; /* Height of each image */
+  border: 1px solid green; /* Green border around each image */
+  box-sizing: border-box; /* Include border in width and height calculations */
 }
