--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -83,33 +83,12 @@ iframe{
   margin-bottom: 10px;
   background-image: url('https://th.bing.com/th/id/OIG.bKqqn9I0Cpci9WJTxFLJ?pid=ImgGn');
   background-size: cover;
-  max-height: 300px; /* Set a fixed height for the table container */
+  max-height: 250px; /* Set a fixed height for the table container */
   overflow-y: auto; /* Enable vertical scrolling */
   border: 1px solid #ccc; /* Optional border for visualization */
 }
 
-.image-containerA {
-  width: 1920px; /* Set the container width */
-  height: 1800px; /* Set the container height */
-  border: 1px solid red; /* Red border around the container */
-  position: relative; /* Establishes a positioning context for absolutely positioned children */
-}
-
-.image-containerA .image-wrapper {
-  position: absolute; /* Position the wrapper relative to the container */
-  top: 0;
-  left: 0;
-  width: 100%; /* Occupy full width of the container */
-  height: 100%; /* Occupy full height of the container */
-  display: flex;
-  flex-wrap: wrap;
-  border: 1px solid blue; /* Blue border around the wrapper for visualization */
-  box-sizing: border-box; /* Include border in width and height calculations */
-}
-
-.image-container .item {
-  width: 100px; /* Width of each image */
-  height: 100px; /* Height of each image */
-  border: 1px solid green; /* Green border around each image */
-  box-sizing: border-box; /* Include border in width and height calculations */
+.image-container > figure > img  {
+ 
+  /* Additional styles for smaller items */
 }
