--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,12 +3,10 @@
     <!-- Show this when isLoading is true -->
     <p>Please wait while Page is loading...</p>
     <h1 style="font-size:3vw; color: red">BRING THEM HOME</h1>
-    <div class="image-containerA">
-      <div class="image-wrapperA">
+    <div class="impotedhtml" style="border: 20px solid red; width: 1700px; height: 1080px;;" >
         <div  [innerHTML]="documentHtmlContent"></div> 
       </div>
       </div>
-        </div>
   <ng-template #content>
     <div id="yt-background">
         <iframe
