--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,7 +7,19 @@ table {
     border: 1px solid red; /* This adds a border to the table cells */
     padding: 8px; /* This adds some space around the content in the table cells */  
   }
-  
+
+/* Default styles */
+body {
+  /* Default styles for larger screens */
+}
+
+/* Media query for smaller screens (e.g., mobile devices) */
+@media screen and (max-width: 767px) {
+  body {
+    zoom: 0.5; /* Set a specific zoom level for smaller screens */
+  }
+}
+
 /* Video background container */
 #yt-background {
   position: fixed;
