--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,7 @@
 <head>
+   <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
-<style>
-  /* app.component.css */
- body {
-   zoom: 100%;
- }
- 
- /* Media query for desktop devices */
- @media (min-width: 768px) {
-   body {
-     zoom: 100%;
-   }
- }
-   </style>
-     <body>
 <div *ngIf="isLoading; else content">
     <!-- Show this when isLoading is true -->
     <p>Please wait while Page is loading...</p>
