--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
+<body>
 <div *ngIf="isLoading; else content">
     <!-- Show this when isLoading is true -->
     <p>Please wait while Page is loading...</p>
