--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     <p>Please wait while Page is loading...</p>
 
     <h1 style="font-size:3vw; color: red">BRING THEM HOME</h1>
-    <div class="impotedhtml" style="border: 20px solid red; width: 1700px; height: 1080px;" >
+    <div class="impotedhtml" style="border: 20px solid red;max-height: 80vh;max-height: 80vh;" >
         <div  [innerHTML]="documentHtmlContent"></div> 
       </div>
       </div>
