--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,10 +5,9 @@
 <body>
 <div *ngIf="isLoading; else content">
     <!-- Show this when isLoading is true -->
-    <p>Please wait while Page is loading...</p>
-
+    <p>Please wait while Page is loading...</p> 
     <h1 style="font-size:3vw; color: red">BRING THEM HOME</h1>
-    <div class="impotedhtml" style="border: 20px solid red;max-height: 80vh; max-width: 80vmin;" >
+    <div class="impotedhtml" style="border: 20px solid red;width: 100vw;height: 100vh;box-sizing: border-box;" >
         <div  [innerHTML]="documentHtmlContent"></div> 
       </div>
       </div>
