--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-<div *ngIf="isLoading; else content">
+<div *ngIf="isLoading; else querypage">
     <!-- Show this when isLoading is true -->
     <p>Please wait while Page is loading...</p> 
     <h1 style="font-size:3vw; color: red">BRING THEM HOME</h1>
@@ -11,65 +11,67 @@
         <div  [innerHTML]="documentHtmlContent"></div> 
       </div>
       </div>
-  <ng-template #content>
-    <div id="yt-background">
-        <iframe
-        src="https://www.youtube.com/embed/8FomPFXPmHs?mute=1&autoplay=1&controls=0&loop=1&playlist=8FomPFXPmHs"
-        title="Drone video shows Hamas&#39; destruction at Israel music festival" 
-        frameborder="0" 
-        allow="autoplay; encrypted-media" 
-        allowfullscreen></iframe>
-        <iframe 
-        src="https://www.youtube.com/embed/nr5ttKmMaks?mute=1&autoplay=1&controls=0&loop=1&playlist=nr5ttKmMaks"
-        title="Israel-Hamas war: Drone footage shows devastation of Be&#39;eri kibbutz | WION Originals" 
-        frameborder="0" 
-        allow="autoplay; encrypted-media"
-        allowfullscreen></iframe>
-        <iframe
-        src="https://www.youtube.com/embed/VMSpCdmwH6w?mute=1&autoplay=1&controls=0&loop=1&playlist=VMSpCdmwH6w"
-        title="ערוץ 12: היום הראשון של מלחמת חרבות ברזל, 07.10.2023 (א)" 
-        frameborder="0" 
-        allow="autoplay; encrypted-media"
-        allowfullscreen></iframe>
-        <iframe
-        src="https://www.youtube.com/embed/8iibO7SHbgo?mute=1&autoplay=1&controls=0&loop=1&playlist=8iibO7SHbgo"
-        title="Israel&#39;s Kfar Aza kibbutz left in ruins after deadly Hamas attack"
-        frameborder="0"
-        allow="autoplay; encrypted-media" 
-        allowfullscreen></iframe>
-        <iframe 
-        src="https://www.youtube.com/embed/rjgcgfo4o1k?mute=1&autoplay=1&controls=0&loop=1&playlist=rjgcgfo4o1k"
-        title="Sirens blare amid rocket attacks in Israel and Gaza Strip" 
-        frameborder="0" 
-        allow="autoplay; encrypted-media" 
-        allowfullscreen></iframe>
-        <iframe 
-        src="https://www.youtube.com/embed/tD5Ldwe0kyE?mute=1&autoplay=1&controls=0&loop=1&playlist=tD5Ldwe0kyE"
-        title="Debris Removal Begins At Police HQ Destroyed By Hamas In Sderot, Israel" 
-        allow="autoplay; encrypted-media" 
-        allowfullscreen></iframe>
-        <iframe  
-        src="https://www.youtube.com/embed/xS8dwk83sD4?mute=1&autoplay=1&controls=0&loop=1&playlist=xS8dwk83sD4"
-        title="הכירו את &quot;ציר המוות&quot; בשדרות, בו נרצחו 13 גמלאים באוטובוס" 
-        frameborder="0" 
-        allow="autoplay; encrypted-media" 
-        allowfullscreen></iframe>
-      </div> 
-        <div id="video-overlay"></div>
-        <div class="content">7-October-2023<br>Simhat Torah<br>Black Saturday </div>
-        <div id="count-wrapper"><label id="count">{{victimscount}}</label></div>
+  <ng-template #querypage>
+      <div class="querycontainer">
+        <div class="querywrapper">
+        <div class="querytitle">7-October-2023<br>Simhat Torah<br>Black Saturday </div>
+          <div id="count-wrapper" >
+            <label class="drop"><p>{{victimscount}}</p></label>
+          </div>
+        <div class="selectoptions">
         <input type="text" [(ngModel)]="searchQuery" (input)="filterElements()" placeholder="free text search">
         <select [(ngModel)]="selectedOption" (change)="filterElements()">
           <option *ngFor="let option of options" [value]="option">{{option}}</option>
       </select>
-    <!--<div *ngFor="let element of filteredElements" [innerHTML]="element.innerHTML">
-      
-    </div> -->
+    </div>
       <div *ngIf="filteredElements == '' else filteredhtml">
         <div [innerHTML]="htmlContent" class="impotedhtml"></div>
       </div>
       <ng-template #filteredhtml>
         <div [innerHTML]="filteredElements" class="impotedhtml"></div>
       </ng-template>
+    </div>
+  </div>
+  <div id="yt-background">
+    <div class="left-column">
+      <iframe
+      src="https://www.youtube.com/embed/8FomPFXPmHs?mute=1&autoplay=1&controls=0&loop=1&playlist=8FomPFXPmHs"
+      title="Drone video shows Hamas&#39; destruction at Israel music festival" 
+      frameborder="0" 
+      allow="autoplay; encrypted-media" 
+      allowfullscreen></iframe>
+      <iframe
+      src="https://www.youtube.com/embed/VMSpCdmwH6w?mute=1&autoplay=1&controls=0&loop=1&playlist=VMSpCdmwH6w"
+      title="ערוץ 12: היום הראשון של מלחמת חרבות ברזל, 07.10.2023 (א)" 
+      frameborder="0" 
+      allow="autoplay; encrypted-media"
+      allowfullscreen></iframe>
+      <iframe
+      src="https://www.youtube.com/embed/8iibO7SHbgo?mute=1&autoplay=1&controls=0&loop=1&playlist=8iibO7SHbgo"
+      title="Israel&#39;s Kfar Aza kibbutz left in ruins after deadly Hamas attack"
+      frameborder="0"
+      allow="autoplay; encrypted-media" 
+      allowfullscreen></iframe>
+    </div>
+    <div class="right-column">
+      <iframe 
+      src="https://www.youtube.com/embed/rjgcgfo4o1k?mute=1&autoplay=1&controls=0&loop=1&playlist=rjgcgfo4o1k"
+      title="Sirens blare amid rocket attacks in Israel and Gaza Strip" 
+      frameborder="0" 
+      allow="autoplay; encrypted-media" 
+      allowfullscreen></iframe>
+      <iframe 
+      src="https://www.youtube.com/embed/tD5Ldwe0kyE?mute=1&autoplay=1&controls=0&loop=1&playlist=tD5Ldwe0kyE"
+      title="Debris Removal Begins At Police HQ Destroyed By Hamas In Sderot, Israel" 
+      allow="autoplay; encrypted-media" 
+      allowfullscreen></iframe>
+      <iframe  
+      src="https://www.youtube.com/embed/xS8dwk83sD4?mute=1&autoplay=1&controls=0&loop=1&playlist=xS8dwk83sD4"
+      title="הכירו את &quot;ציר המוות&quot; בשדרות, בו נרצחו 13 גמלאים באוטובוס" 
+      frameborder="0" 
+      allow="autoplay; encrypted-media" 
+      allowfullscreen></iframe>
+    </div>
+    </div>
     </ng-template> 
   </body>
