--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,8 +12,38 @@
       </div>
       </div>
   <ng-template #querypage>
-      <div class="querycontainer">
-        <div class="querywrapper">
+    <table class="content-table">
+      <tr>
+        <td class="iframe-left">
+          <iframe
+          width="400" 
+          height="300" 
+          src="https://www.youtube.com/embed/8FomPFXPmHs?mute=1&autoplay=1&controls=0&loop=1&playlist=8FomPFXPmHs"
+          title="Drone video shows Hamas&#39; destruction at Israel music festival" 
+          frameborder="0" 
+          allow="autoplay; encrypted-media" 
+          allowfullscreen></iframe>
+          <div class="overlay"></div>
+          <iframe
+          width="400" 
+          height="300" 
+          src="https://www.youtube.com/embed/VMSpCdmwH6w?mute=1&autoplay=1&controls=0&loop=1&playlist=VMSpCdmwH6w"
+          title="ערוץ 12: היום הראשון של מלחמת חרבות ברזל, 07.10.2023 (א)" 
+          frameborder="0" 
+          allow="autoplay; encrypted-media"
+          allowfullscreen></iframe>
+          <div class="overlay"></div>
+          <iframe
+          width="400" 
+          height="300" 
+          src="https://www.youtube.com/embed/8iibO7SHbgo?mute=1&autoplay=1&controls=0&loop=1&playlist=8iibO7SHbgo"
+          title="Israel&#39;s Kfar Aza kibbutz left in ruins after deadly Hamas attack"
+          frameborder="0"
+          allow="autoplay; encrypted-media" 
+          allowfullscreen></iframe>
+          <div class="overlay"></div>
+  </td>
+    <td class="center-content">
         <div class="querytitle">7-October-2023<br>Simhat Torah<br>Black Saturday </div>
           <div id="count-wrapper" >
             <label class="drop"><p>{{victimscount}}</p></label>
@@ -30,48 +60,37 @@
       <ng-template #filteredhtml>
         <div [innerHTML]="filteredElements" class="impotedhtml"></div>
       </ng-template>
-    </div>
-  </div>
-  <div id="yt-background">
-    <div class="left-column">
-      <iframe
-      src="https://www.youtube.com/embed/8FomPFXPmHs?mute=1&autoplay=1&controls=0&loop=1&playlist=8FomPFXPmHs"
-      title="Drone video shows Hamas&#39; destruction at Israel music festival" 
-      frameborder="0" 
-      allow="autoplay; encrypted-media" 
-      allowfullscreen></iframe>
-      <iframe
-      src="https://www.youtube.com/embed/VMSpCdmwH6w?mute=1&autoplay=1&controls=0&loop=1&playlist=VMSpCdmwH6w"
-      title="ערוץ 12: היום הראשון של מלחמת חרבות ברזל, 07.10.2023 (א)" 
-      frameborder="0" 
-      allow="autoplay; encrypted-media"
-      allowfullscreen></iframe>
-      <iframe
-      src="https://www.youtube.com/embed/8iibO7SHbgo?mute=1&autoplay=1&controls=0&loop=1&playlist=8iibO7SHbgo"
-      title="Israel&#39;s Kfar Aza kibbutz left in ruins after deadly Hamas attack"
-      frameborder="0"
-      allow="autoplay; encrypted-media" 
-      allowfullscreen></iframe>
-    </div>
-    <div class="right-column">
+    </td>
+    <td class="iframe-right ">
       <iframe 
+      width="400" 
+      height="300" 
       src="https://www.youtube.com/embed/rjgcgfo4o1k?mute=1&autoplay=1&controls=0&loop=1&playlist=rjgcgfo4o1k"
       title="Sirens blare amid rocket attacks in Israel and Gaza Strip" 
       frameborder="0" 
       allow="autoplay; encrypted-media" 
       allowfullscreen></iframe>
+      <div class="overlay"></div>
       <iframe 
+      width="400" 
+      height="300" 
       src="https://www.youtube.com/embed/tD5Ldwe0kyE?mute=1&autoplay=1&controls=0&loop=1&playlist=tD5Ldwe0kyE"
-      title="Debris Removal Begins At Police HQ Destroyed By Hamas In Sderot, Israel" 
+      title="Debris Removal Begins At Police HQ Destroyed By Hamas In Sderot, Israel"
+      frameborder="0" 
       allow="autoplay; encrypted-media" 
       allowfullscreen></iframe>
+      <div class="overlay"></div>
       <iframe  
+      width="400" 
+      height="300" 
       src="https://www.youtube.com/embed/xS8dwk83sD4?mute=1&autoplay=1&controls=0&loop=1&playlist=xS8dwk83sD4"
       title="הכירו את &quot;ציר המוות&quot; בשדרות, בו נרצחו 13 גמלאים באוטובוס" 
       frameborder="0" 
       allow="autoplay; encrypted-media" 
       allowfullscreen></iframe>
-    </div>
-    </div>
+      <div class="overlay"></div>
+      </td>
+  </tr>
+  </table>
     </ng-template> 
   </body>
