--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,23 +8,37 @@ table {
     padding: 8px; /* This adds some space around the content in the table cells */  
   }
 
-  /*video styling starts*/
-/* Video background container */
-#yt-background {
-  display:flex;
-  max-width: 1200px; /* Set the maximum width as needed */
-  margin: 0 auto; /* Center the container */
-}
-
-iframe {
-  display: block;
-  width: 100%;
-  height: 200px; /* Set the height as needed */
-  margin-bottom: 10px; /* Optional: Adjust the spacing between videos */
-}
-/*video styling end*/
-
-
+  .content-table {
+    table-layout: fixed;
+    width: 100%; /* Set the table width to fill the available space */
+  }
+  
+  .content-table td {
+    vertical-align: top; /* Align content to the top of cells */
+    border: 1px solid white; /* This adds a border to the table cells */
+    width: 600px;
+  }
+  
+  center-content{
+    width: 100% /* Center content occupies remaining space */
+  }
+  .iframe-left,
+  .iframe-right {
+    position: relative;
+    width: 400px;
+    height: 300px;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    /* Adjust z-index to position it in front of the iframe */
+    z-index: 1;
+  }
+  
 /*queryfiltering starts */
 .impotedhtml
 {
