--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,8 +65,8 @@
       <iframe 
       width="400" 
       height="300" 
-      src="https://www.youtube.com/embed/rjgcgfo4o1k?mute=1&autoplay=1&controls=0&loop=1&playlist=rjgcgfo4o1k"
-      title="Sirens blare amid rocket attacks in Israel and Gaza Strip" 
+      src="https://www.youtube.com/embed/zCtLLT_36lY?mute=1&autoplay=1&controls=0&loop=1&playlist=zCtLLT_36lY" 
+      title="הקרב על חילוץ בני הערובה באופקים" 
       frameborder="0" 
       allow="autoplay; encrypted-media" 
       allowfullscreen></iframe>
