--- a/src/app/app-youtube-player/app-youtube-player.component.html
+++ b/src/app/app-youtube-player/app-youtube-player.component.html
@@ -1,9 +1,10 @@
-<div style="position: relative; width: 1700px; height: 200px;">
+<div style="position: relative; width: 1700px; height:150px">
     <youtube-player [videoId]="videoId"
                     [playerVars]="playerVars"
                     suggestedQuality="highres"
-                    [height]="200"
-                    [width]="1700">
+                    [width]="1700"
+                    [height]="150"
+                    >
     </youtube-player>
     <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
 </div>
