--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,13 @@
 table {
+    /*
     color: #333;
     background-color: #f5f5f5;
+        */
   }
   td, tr {
     color: #333;
     border: 1px solid red; /* This adds a border to the table cells */
-    padding: 8px; /* This adds some space around the content in the table cells */  
+    /*padding: 8px; /* This adds some space around the content in the table cells */  
   }
 
   .content-table {
@@ -16,36 +18,38 @@ table {
   .content-table td {
     vertical-align: top; /* Align content to the top of cells */
     border: 1px solid white; /* This adds a border to the table cells */
-    width: 600px;
+    width: auto;
   }
   
-    center-content{
+center-content{
     width: 100% /* Center content occupies remaining space */
   }
 
 .iframe-left {
+    
     position: relative;
     width: 400px;
     height: 300px;
-    /*float: right; */ /* Align the iframe to the right */
+    float: right; /* Align the iframe to the right */
     display: block;
-    margin-left: auto;
+    margin-left:inherit;
 }
-  .iframe-right {
+.iframe-right {
     position: relative;
     width: 400px;
     height: 300px;
   }
-  
-  .overlay {
+
+.overlay {
     position: absolute;
     top: 0;
-    left:0;
+    left: 0;
     width: 100%;
     height: 100%;
     /* Adjust z-index to position it in front of the iframe */
     z-index: 1;
-  }
+    /*background-color:blue;*/
+}
   
 /*queryfiltering starts */
 .impotedhtml {
