fixing youtube-player component

--- a/src/app/app-youtube-player/app-youtube-player.component.html
+++ b/src/app/app-youtube-player/app-youtube-player.component.html
@@ -1,10 +1,10 @@
-<div style="position: relative; width: 1700px; height:150px">
+<div class="youtubewrap" >
     <youtube-player [videoId]="videoId"
                     [playerVars]="playerVars"
                     suggestedQuality="highres"
-                    [width]="1700"
-                    [height]="150"
+                    [width]="width" 
+                    [height]="height"
                     >
     </youtube-player>
-    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
+    <div class="youtubefooter"></div>
 </div>
