--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,24 +19,21 @@
         <table class="content-table">
             <tr>
                 <td class="iframe-left">
-                    <iframe width="500"
-                            height="200"
+                    <iframe 
                             src="https://www.youtube.com/embed/8FomPFXPmHs?mute=1&autoplay=1&controls=0&loop=1&playlist=8FomPFXPmHs"
                             title="Drone video shows Hamas&#39; destruction at Israel music festival"
                             frameborder="0"
                             allow="autoplay; encrypted-media">
                     </iframe>
                     <div class="overlay"></div>
-                    <iframe width="500"
-                            height="200"
+                    <iframe
                             src="https://www.youtube.com/embed/VMSpCdmwH6w?mute=1&autoplay=1&controls=0&loop=1&playlist=VMSpCdmwH6w"
                             title="ערוץ 12: היום הראשון של מלחמת חרבות ברזל, 07.10.2023 (א)"
                             frameborder="0"
                             allow="autoplay; encrypted-media">
                     </iframe>
                     <div class="overlay"></div>
-                    <iframe width="500"
-                            height="200"
+                    <iframe
                             src="https://www.youtube.com/embed/8iibO7SHbgo?mute=1&autoplay=1&controls=0&loop=1&playlist=8iibO7SHbgo"
                             title="Israel&#39;s Kfar Aza kibbutz left in ruins after deadly Hamas attack"
                             frameborder="0"
@@ -63,24 +60,21 @@
                     </ng-template>
                 </td>
                 <td class="iframe-right">
-                    <iframe width="500"
-                            height="200"
+                    <iframe
                             src="https://www.youtube.com/embed/zCtLLT_36lY?mute=1&autoplay=1&controls=0&loop=1&playlist=zCtLLT_36lY"
                             title="הקרב על חילוץ בני הערובה באופקים"
                             frameborder="0"
                             allow="autoplay; encrypted-media">
                     </iframe>
                     <div class="overlay"></div>
-                    <iframe width="500"
-                            height="200"
+                    <iframe
                             src="https://www.youtube.com/embed/tD5Ldwe0kyE?mute=1&autoplay=1&controls=0&loop=1&playlist=tD5Ldwe0kyE"
                             title="Debris Removal Begins At Police HQ Destroyed By Hamas In Sderot, Israel"
                             frameborder="0"
                             allow="autoplay; encrypted-media">
                     </iframe>
                     <div class="overlay"></div>
-                    <iframe width="500"
-                            height="200"
+                    <iframe 
                             src="https://www.youtube.com/embed/xS8dwk83sD4?mute=1&autoplay=1&controls=0&loop=1&playlist=xS8dwk83sD4"
                             title="הכירו את &quot;ציר המוות&quot; בשדרות, בו נרצחו 13 גמלאים באוטובוס"
                             frameborder="0"
