--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,11 @@
 table {
-    /*
     color: #333;
     background-color: #f5f5f5;
-        */
+
+  }
+  iframe{
+    width:500;
+    height:200;
   }
   td, tr {
     color: #333;
