--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -163,16 +163,26 @@
     fill: var(--gray-900);
   }
 
-  @media screen and (max-width: 650px) {
+  @media screen and (max-width: 768px) {
+    /* Styles for mobile screens */
+    h1 {
+      font-size: 2rem;
+    }
+  
     .content {
       flex-direction: column;
-      width: max-content;
     }
-
+  
     .divider {
-      height: 1px;
-      width: 100%;
-      background: var(--red-to-pink-to-purple-horizontal-gradient);
-      margin-block: 1.5rem;
+      display: none;
+    }
+  
+    .pill-group {
+      align-items: center;
+    }
+  
+    .social-links {
+      justify-content: center;
     }
   }
+  
