--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -225,4 +225,16 @@ center-content{
   #count-wrapper {
     width: 100%;
   }
+
+    /* Styles for mobile screens */
+    .center-content {
+      display: flex; /* Use flexbox to layout the children */
+      flex-wrap: wrap; /* Allow the items to wrap onto multiple lines */
+      justify-content: space-around; /* Distribute items evenly with space around them */
+    }
+  
+    .center-content > div {
+      flex: 1 0 auto; /* Allow the children to grow and shrink as needed */
+      max-width: 50%; /* Set a max-width to prevent the items from growing too large */
+    }
 }
