--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -220,21 +220,17 @@ center-content{
     width: 100%;
     height: auto;
     float: none;
-  }
+  }chmod +x git_push.sh
 
   #count-wrapper {
     width: 100%;
   }
-
     /* Styles for mobile screens */
     .center-content {
-      display: flex; /* Use flexbox to layout the children */
-      flex-wrap: wrap; /* Allow the items to wrap onto multiple lines */
-      justify-content: space-around; /* Distribute items evenly with space around them */
+      flex-direction: column; /* Stack the images vertically */
     }
   
     .center-content > div {
-      flex: 1 0 auto; /* Allow the children to grow and shrink as needed */
-      max-width: 50%; /* Set a max-width to prevent the items from growing too large */
+      max-width: 100%; /* Allow the images to take the full width */
     }
 }
