--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -233,7 +233,7 @@ center-content{
     }
   
     .center-content > div {
-      flex: 1 0 0; /* Allow the children to grow and shrink, even smaller than their content */
-      max-width: 50%; /* Allow the children to take up the full width if necessary */
+      flex: 1 0 auto; /* Allow the children to grow and shrink as needed */
+      max-width: 50%; /* Set a max-width to prevent the items from growing too large */
     }
   }
